UtahLiveDataTest/src/objects/ProgramContacts__c.object
<CustomObject>
    <description>[Business] Contacts associated with a Program</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ProgramContacts</relationshipLabel>
        <relationshipName>ProgramContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>Program__r.HideProgramContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>ProgramContacts</relationshipLabel>
        <relationshipName>ProgramContacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Contact__r.Account.RecordType.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Program Contact</label>
    <nameField>
        <displayFormat>ProgCont-{0000}</displayFormat>
        <label>Program Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProgramContacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>